Do not show Find in Files menu if KFileReplace is not installed.

BUG: 132530